[gd_scene load_steps=21 format=2]

[ext_resource path="res://Shared/Countdown.tscn" type="PackedScene" id=1]
[ext_resource path="res://Core/HealthMeter.gd" type="Script" id=2]
[ext_resource path="res://Core/Game.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/sportsball-font/SportsballRegular-RxlM.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Mouse.png" type="Texture" id=5]
[ext_resource path="res://assets/Keys.png" type="Texture" id=6]
[ext_resource path="res://assets/heart.png" type="Texture" id=7]
[ext_resource path="res://assets/skills/power.png" type="Texture" id=8]
[ext_resource path="res://assets/skills/precision.png" type="Texture" id=9]
[ext_resource path="res://assets/skills/timing.png" type="Texture" id=10]
[ext_resource path="res://Core/Skilltree.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Countdown" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_left = 2.0
margin_top = 1.0
margin_right = 118.0
margin_bottom = 153.0

[node name="Titlecard2" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Titlecard2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Titlecard2"]
margin_left = 316.729
margin_top = 237.406
margin_right = 686.729
margin_bottom = 314.406
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse" type="Sprite" parent="CanvasLayer/Titlecard2"]
position = Vector2( 465.65, 384.351 )
texture = ExtResource( 5 )

[node name="Keys" type="Sprite" parent="CanvasLayer/Titlecard2"]
position = Vector2( 483.11, 383.162 )
texture = ExtResource( 6 )

[node name="Preview" type="Sprite" parent="CanvasLayer/Titlecard2"]
position = Vector2( 623.629, 304.687 )
centered = false

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
margin_left = 241.978
margin_top = 236.071
margin_right = 794.978
margin_bottom = 313.071
custom_fonts/font = SubResource( 1 )
text = "You lost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamecount" type="Label" parent="CanvasLayer/GameOver"]
margin_left = 327.036
margin_top = 349.728
margin_right = 670.036
margin_bottom = 400.728
custom_fonts/font = SubResource( 8 )
text = "After X games"
align = 1

[node name="Button" type="Button" parent="CanvasLayer/GameOver"]
margin_left = 420.474
margin_top = 464.524
margin_right = 553.474
margin_bottom = 511.524
custom_fonts/font = SubResource( 9 )
text = "OK"

[node name="HealthMeter" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="TextureRect" parent="CanvasLayer/HealthMeter"]
anchor_left = -0.05
margin_left = 822.0
margin_top = 4.005
margin_right = 1220.0
margin_bottom = 104.005
grow_horizontal = 0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skillscreen" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Skillscreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 484.215
margin_top = 239.001
margin_right = 772.215
margin_bottom = 279.001
custom_fonts/font = SubResource( 2 )
text = "Skillname"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 359.215
margin_top = 298.001
margin_right = 873.215
margin_bottom = 385.001
custom_fonts/font = SubResource( 3 )
text = "Here goes the skill description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="TextureRect" parent="CanvasLayer/Skillscreen"]
margin_left = 160.439
margin_top = 332.087
margin_right = 360.439
margin_bottom = 532.087
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="precision" type="TextureRect" parent="CanvasLayer/Skillscreen"]
margin_left = 160.439
margin_top = 448.969
margin_right = 360.439
margin_bottom = 648.969
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="timing" type="TextureRect" parent="CanvasLayer/Skillscreen"]
margin_left = 159.903
margin_top = 212.452
margin_right = 359.903
margin_bottom = 412.452
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Day" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 143.0
margin_top = 50.0
margin_right = 828.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 4 )
text = "You reflect on your day,
and are more determined than ever to learn from your mistakes.

skill points: 0"
autowrap = true

[node name="power_level" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 187.0
margin_top = 408.0
margin_right = 260.0
margin_bottom = 433.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 2
valign = 2

[node name="timing_level" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 188.0
margin_top = 293.0
margin_right = 259.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 2
valign = 2

[node name="precision_level" type="Label" parent="CanvasLayer/Skillscreen"]
margin_left = 194.0
margin_top = 522.0
margin_right = 262.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="CanvasLayer/GameOver/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Skillscreen/power" to="CanvasLayer/Skillscreen" method="_on_power_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Skillscreen/power" to="CanvasLayer/Skillscreen" method="_on_power_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Skillscreen/precision" to="CanvasLayer/Skillscreen" method="_on_precision_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Skillscreen/precision" to="CanvasLayer/Skillscreen" method="_on_precision_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Skillscreen/timing" to="CanvasLayer/Skillscreen" method="_on_timing_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Skillscreen/timing" to="CanvasLayer/Skillscreen" method="_on_timing_mouse_exited"]
